--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://munkm.github.io/yt-blog/"
+baseurl = "https://munkm.github.io/yt-blog/"
 languageCode = "en-us"
 title = "yt project blog"
 theme = "dream"
