fix URL paths in posts with canonifyURL

--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseurl = "https://munkm.github.io/yt-blog/"
 languageCode = "en-us"
 title = "yt project blog"
 theme = "dream"
+canonifyURLs = true
 
 
 [params]
