remove summary cover for each post

--- a/config.toml
+++ b/config.toml
@@ -18,8 +18,7 @@ canonifyURLs = true
   enableSearch = true
 
   # options
-  showSummaryCoverInPost = true
-  # hasTwitterEmbed = true
+  hasTwitterEmbed = true
 
 [outputs]
   home = ["HTML", "RSS", "JSON"]
