--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,11 +16,15 @@ jobs:
           POST_TITLE: ${{ github.event.issue.title }}
           POST_BODY: ${{ github.event.issue.body }}
         run: |
-          preprocess_bin="$PWD/create_post.sh"
-          post_save="content/posts/${POST_TITLE}.md"
-          img_save_dir="static/img/$POST_TITLE"
+          script_loc="$PWD/create_post.sh"
+          post_save="./content/posts/${POST_TITLE}.md"
+          echo "$post_save"
+          img_save_dir="./static/img/$POST_TITLE"
+          echo "$img_save_dir"
           mkdir "$img_save_dir"
-          $create_post.sh ${POST_TITLE} > ${post_save} << EOF
+          echo -e "$POST_BODY"
+          # echo -e "$POST_BODY" | sh "$script_loc" "${POST_TITLE}" > "${post_save}" 
+          "$script_loc" "${POST_TITLE}" > "${post_save}" << EOF
           $POST_BODY
           EOF
           
@@ -34,5 +38,5 @@ jobs:
 
             Merging will publish to: https://munkm.github.io/yt-blog/posts//${{ github.event.issue.title }}
             Closes #${{ github.event.issue.number }}
-          reviewers: "${{ github.repository_owner }}, ${{ github.event.issue.user }}"
+          reviewers: "${{ github.repository_owner }}"
           commit-message: "post: ${{ github.event.issue.title }}"
